Fix compiling errors

--- a/src/index.html
+++ b/src/index.html
@@ -86,9 +86,9 @@
           Metale wewnątrz włókien włosa
         </p>
         <p class="es-metale__text">
-          Czy wiesz, że&nbsp;podczas każdego mycia włosów metale zawarte w&nbsp;wodzie wnikają do&nbsp;ich&nbsp;włókien? Wpływają na&nbsp;uszkodzenia i&nbsp;łamliwość 
-          włosów oraz&nbsp;niejednolity efekt koloryzacji. <strong></br>Postaw na&nbsp;pielęgnację Metal Detox i&nbsp;zachowaj 
-            lepszą jakość swoich włosów.  </strong>  
+          Czy wiesz, że&nbsp;podczas każdego mycia włosów metale zawarte w&nbsp;wodzie wnikają do&nbsp;ich&nbsp;włókien? Wpływają na&nbsp;uszkodzenia i&nbsp;łamliwość
+          włosów oraz&nbsp;niejednolity efekt koloryzacji. <strong><br>Postaw na&nbsp;pielęgnację Metal Detox i&nbsp;zachowaj
+            lepszą jakość swoich włosów.  </strong>
         </p>
         <div class="es-metale__wrapper es-metale__wrapper--1">
           <div class="es-metale__content">
@@ -193,7 +193,7 @@
               <p class="es-cross__text">
                 <strong>SZAMPON</strong><br><br>
                 Delikatne oczyszczenie<br>włókien włosów, ochrona<br> włosów przed odkładaniem się<br>
-                zanieczyszczeń metali. Włosy</br> wyglądają zdrowo, są lśniące.
+                zanieczyszczeń metali. Włosy<br> wyglądają zdrowo, są lśniące.
               </p>
               <a href="https://friser.pl/metal-detox/szampon-do-wlosow-farbowanych-neutralizujacy-metale-300ml" class="es-cross__link">
                 <strong>sprawdź</strong></a>
