Change text in metale sections

--- a/src/index.html
+++ b/src/index.html
@@ -111,14 +111,12 @@
           </div>
           <div class="es-metale__content">
             <p class="es-metale__subtitle">
-              Złota maska<br> Absolut Repair
+              Maska<br>metal detox
             </p>
             <ul class="es-metale__list">
-              <li class="es-metale__item">regeneruje i&nbsp;odbudowuje włosy bez efektu obciążenia</li>
-              <li class="es-metale__item">odżywia i&nbsp;chroni włosy</li>
-              <li class="es-metale__item">zapobiega przesuszeniu włosów</li>
-              <li class="es-metale__item">wygładza włosy i&nbsp;przywraca im blask</li>
-              <li class="es-metale__item">nie obciąża</li>
+              <li class="es-metale__item">chroni włosy przed odkładaniem się zanieczyszczeń metali</li>
+              <li class="es-metale__item">sprawia, że włosy są odżywione i&nbsp;mniej porowate</li>
+              <li class="es-metale__item">efekt: mięsiste, miękkie i&nbsp;pełne blasku włosy</li>
             </ul>
           </div>
         </div>
